# pt.c-interop-in-clojure

./: README.org
jna/c-hello/: CMakeLists.txt
jna/clj-hello/: .gitignore  build.boot
jna/clj-hello/src/clj_hello/: core.clj
jni/: Rakefile
jni/c-hello/src/: hello.c
jni/clj-hello/: CHANGELOG.md  build.boot
jni/clj-hello/src/clj_hello/: core.clj
jni/java-interop/: .gitignore  CMakeLists.txt
jni/java-interop/include/: hello_JNIHello.h
jni/java-interop/src/: JNIHello.c
jni/java-native/: .gitignore
jni/java-native/hello/: JNIHello.java
jnr/: Rakefile
jnr/clj-hello/: build.boot
jnr/clj-hello/src/clj_hello/: core.clj
panama/: Rakefile
panama/c-hello/: .gitignore
panama/c-hello/include/: hello.h
panama/c-hello/src/: hello.c
panama/clj-hello/: .gitignore  boot.properties  build.boot  deps.edn  libhello.dylib
panama/clj-hello/src/clj_hello/: core.clj  playground.clj
